Improved the search functionality

--- a/app/views/explore/index.html.erb
+++ b/app/views/explore/index.html.erb
@@ -1,7 +1,6 @@
 <% @users.each do |user|%>
-  <% if user !== current_user do%> 
 
-    <div>
+    <div style="color:black; background-color: white; height:500px; width:500px;">
 
       <p> User : <%= user.username %></p>
       <br>
@@ -32,5 +31,4 @@
 
     </div>
 
-  <% end %>
 <% end %>
