--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -491,7 +491,7 @@
 }
 .home-inner3313{
   flex: 1.5;
-  background-color: red;
+  // background-color: red;
 }
 .profile-photo-wrapper{
   height: 2rem;
